added table-td bacground color

--- a/src/pages/UserReport/style.css
+++ b/src/pages/UserReport/style.css
@@ -33,6 +33,10 @@
    text-transform: capitalize;
 }
 
+.t_body tr:first-child td {
+   background-color: rgb(5 118 170 / 10%);
+}
+
 .f_name {
    font-weight: bolder;
 }
